# airi-test-task

./: .gitignore  .pre-commit-config.yaml  README.md  data.dvc  metrics.py  pyproject.toml  test_task.ipynb
.dvc/: config
src/: __init__.py  lightning_model.py  mlflow-init-commands.sh  preprocessing.py  train.py
src/config/: config.yaml
src/config/callbacks/: default_callbacks.yaml  extended_callbacks.yaml
src/config/logging/: comet_ml.yaml  loggers.yaml  wandb.yaml
src/config/loss/: bce_logits.yaml  cutmix.yaml  huber.yaml  mae.yaml  mse.yaml
src/config/model/: cnn.yaml  gradient_boosting.yaml  mlp.yaml  rnn.yaml  transformer.yaml
src/config/optimizer/: adabelief.yaml  adabound.yaml  adadelta.yaml  adagrad.yaml  adam.yaml  adamax.yaml  adamw.yaml  adamwschedulefree.yaml  adan.yaml  asgd.yaml  novograd.yaml  rangeradabelief.yaml  rmsprop.yaml  rprop.yaml  sgd.yaml  sgdschedulefree.yaml
src/config/scheduler/: cosine.yaml  cosinewarm.yaml  cyclic.yaml  exponential.yaml  lambda.yaml  multi_step_reg.yaml  onecycle.yaml  plateau.yaml  step.yaml
src/config/trainer/: default_trainer.yaml
src/models/: __init__.py  autoencoder.py  cnn.py  gradient_boosting.py  mlp.py  rnn.py  transformer.py
src/notebooks/: column_addings_experiments.ipynb  eda.ipynb  test_task.ipynb
src/utils/: __init__.py  dev.py  protein_task.py
