[tool.poetry]
name = "airi"
version = "0.1.0"
description = "This library contains the code used to run a test job to AIRI."
authors = ["JohnConnor123 <ivan.eudokimoff2014@gmail.com>"]
maintainers = ["JohnConnor123 <ivan.eudokimoff2014@gmail.com>"]
# repository = ""
# documentation = "" - in progress
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = {version = "^2.4.0+cu121", source = "torch-repo"}
torchaudio = {version = "^2.4.0+cu121", source = "torch-repo"}
torchvision = {version = "^0.19.0+cu121", source = "torch-repo"}
numpy = "^2.1.0"
pandas = "^2.2.2"
scipy = "^1.14.1"
scikit-learn = "^1.5.1"
pre-commit = "^3.8.0"

[[tool.poetry.source]]
name = "torch-repo"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[tool.black]
line-length = 95

[tool.isort]
profile = "black"
line_length = 90
lines_after_imports = 2

[tool.flake8]
max-line-length = 95
ignore = ['E501', 'E203', 'W503']
max-complexity = 12
select = ['B', 'C', 'E', 'F', 'W', 'B9']
per-file-ignores = [
    # file to define custom types
    'types.py: F401',
]
count = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
